Add license field

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,7 @@ name = "wagon"
 version = "0.1.0"
 authors = ["yasuyuky <yasuyuki.ymd@gmail.com>"]
 edition = "2018"
+license = "MIT"
 
 [dependencies]
 structopt = "0.3.15"
