--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,10 @@
 [package]
 authors = ["yasuyuky <yasuyuki.ymd@gmail.com>"]
+description = "A command line utility to manage configuration files in one place"
 edition = "2018"
 license = "MIT"
 name = "wagon"
+repository = "https://github.com/yasuyuky/wagon"
 version = "0.1.0"
 
 [dependencies]
