--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,4 +14,7 @@ chrono = "0.4.13"
 colored = "2.0.0"
 dirs = "3.0.1"
 glob = "0.3.0"
+serde = "1.0.114"
+serde_derive = "1.0.114"
 structopt = "0.3.16"
+toml = "0.5.6"
