--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,8 +14,7 @@ chrono = "0.4.19"
 colored = "2.0.0"
 dirs = "3.0.1"
 glob = "0.3.0"
-serde = "1.0.118"
-serde_derive = "1.0.118"
+serde = { version = "1.0.119", features = ["derive"] }
 structopt = "0.3.21"
 toml = "0.5.8"
 difflib = "0.4.0"
