--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ colored = "2.0.0"
 difflib = "0.4.0"
 dirs = "4.0.0"
 glob = "0.3.0"
+ignore = "0.4.18"
 libc = "0.2.115"
 log = "0.4.14"
 serde = {version = "1.0.136", features = ["derive"]}
