--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,3 +21,5 @@ log = "0.4.17"
 serde = { version = "1.0.137", features = ["derive"] }
 structopt = "0.3.26"
 toml = "0.5.9"
+tracing = "0.1.35"
+tracing-subscriber = "0.3.11"
