--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ ignore = "0.4.18"
 libc = "0.2.126"
 serde = { version = "1.0.139", features = ["derive"] }
 structopt = "0.3.26"
+time = { version = "0.3.11", features = ["local-offset", "formatting"] }
 toml = "0.5.9"
 tracing = "0.1.35"
 tracing-subscriber = "0.3.14"
