--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ version = "0.4.0"
 
 [dependencies]
 anyhow = "1.0.65"
+clap = { version = "3.2.22", features = ["derive"] }
 colored = "2.0.0"
 difflib = "0.4.0"
 dirs = "4.0.0"
